<resources>
    <string name="app_name">Diceless</string>
    <string name="settings">Settings</string>
    <string name="letsRoll">Let`s Roll</string>
    <!--D related strings-->
    <string name="selectDice">Select a dice to roll</string>
    <string name="D4">D4</string>
    <string name="D6">D6</string>
    <string name="D8">D8</string>
    <string name="D10">D10</string>
    <string name="D12">D12</string>
    <string name="D20">D20</string>
    <string name="D100">D100</string>
    <!--Settings related strings-->
    <string name="soundOn">Sound On</string>
    <string name="done">Done</string>
</resources>